--- a/05 - Understanding Vue Instance/vue-cli/package.json
+++ b/05 - Understanding Vue Instance/vue-cli/package.json
@@ -2,7 +2,7 @@
   "name": "vue-cli",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "Tchontk <tchontk@gmail.com>",
+  "author": "Prck <Prck@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
